Fixed whitespace on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,9 @@
-/* html,body
-{
+html, body {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
-} */
+}
 
 body {
   color: #f5f5f5;
